--- a/sherpa-onnx/src/main/res/layout/activity_main.xml
+++ b/sherpa-onnx/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.android.klaudiak.sherpa.onnx.SherpaOnnxActivity">
+    tools:context="com.android.klaudiak.sherpa_onnx.SherpaOnnxActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
